--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <title>Document</title>
    <style>
       spline-viewer{
-         /* mwidth: 20vw; */
+         height: 100vh;
       }
    </style>
 </head>
