--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
       spline-viewer{
          height: 100vh;
       }
+      #container{
+         background: #000;
+      }
+      #logo{
+         display: none !important;
+      }
    </style>
 </head>
 <body>
    <script type="module" src="https://unpkg.com/@splinetool/viewer/build/spline-viewer.js"></script>
-<spline-viewer url="https://prod.spline.design/D1SAsCO4QuZWhcti/scene.splinecode" events-target="global"></spline-viewer>
+<spline-viewer url="https://prod.spline.design/29-snElDnoywHTbn/scene.splinecode" events-target="global"></spline-viewer>
 </body>
 </html>
