--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
 <body>
    <script type="module" src="https://unpkg.com/@splinetool/viewer/build/spline-viewer.js"></script>
 <spline-viewer url="https://prod.spline.design/29-snElDnoywHTbn/scene.splinecode" events-target="global"></spline-viewer>
+<script>
+ setTimeout(() => {
+   
+  document.querySelector("spline-viewer").shadowRoot.querySelector('a').style.display = 'none'
+ }, 1200);
+</script>
 </body>
 </html>
